working on posts. added pagination to posts
