# internal/post/handler/post_handler.go
@@ -27,9 +27,9 @@ func NewPostHandler(postService postService.PostService) *PostHandler {
 func (h *PostHandler) CreatePost(ctx context.Context, req *postV1.CreatePostRequest) (*postV1.CreatePostResponse, error) {
 	err := validate.Validate(
 		ctx,
-		validation.ValidateTitle(req.GetTitle()),
-		validation.ValidateContent(req.GetContent()),
-		validation.ValidateShortDescription(req.GetShortDescription()),
+		validation.ValidateTitle(req.GetTitle(), "create"),
+		validation.ValidateContent(req.GetContent(), "create"),
+		validation.ValidateShortDescription(req.GetShortDescription(), "create"),
 	)
 
 	if err != nil {
@@ -59,11 +59,46 @@ func (h *PostHandler) CreatePost(ctx context.Context, req *postV1.CreatePostRequ
 }
 
 func (h *PostHandler) GetPost(ctx context.Context, req *postV1.GetPostRequest) (*postV1.GetPostResponse, error) {
-	return nil, nil
+	err := validate.Validate(
+		ctx,
+		validation.ValidateID(req.GetId()),
+	)
+
+	if err != nil {
+		return nil, err
+	}
+
+	post, err := h.postService.GetPost(ctx, req.GetId())
+
+	if err != nil {
+		return nil, commonErrors.NewCommonError(err.Error(), codes.NotFound)
+	}
+
+	return &postV1.GetPostResponse{
+		Post: converter.ToPostProtoFromService(post),
+	}, nil
 }
 
 func (h *PostHandler) UpdatePost(ctx context.Context, req *postV1.UpdatePostRequest) (*emptypb.Empty, error) {
-	return nil, nil
+	err := validate.Validate(
+		ctx,
+		validation.ValidateTitle(req.GetTitle().GetValue(), "update"),
+		validation.ValidateContent(req.GetContent().GetValue(), "update"),
+		validation.ValidateShortDescription(req.GetShortDescription().GetValue(), "update"),
+		validation.ValidateID(req.GetId()),
+	)
+
+	if err != nil {
+		return nil, err
+	}
+
+	err = h.postService.UpdatePost(ctx, req.GetId(), converter.ToPostInfoFromProtoUpdate(req))
+
+	if err != nil {
+		return nil, err
+	}
+
+	return &emptypb.Empty{}, nil
 }
 
 func (h *PostHandler) DeletePost(ctx context.Context, req *postV1.DeletePostRequest) (*emptypb.Empty, error) {
@@ -71,5 +106,11 @@ func (h *PostHandler) DeletePost(ctx context.Context, req *postV1.DeletePostRequ
 }
 
 func (h *PostHandler) ListPosts(ctx context.Context, req *postV1.ListPostsRequest) (*postV1.ListPostsResponse, error) {
-	return nil, nil
+	posts, totalCount, err := h.postService.ListPosts(ctx, req.GetLimit(), req.GetOffset())
+
+	if err != nil {
+		return nil, commonErrors.NewCommonError("failed to list posts", codes.NotFound)
+	}
+
+	return converter.ToPostProtoListFromService(posts, totalCount, req.GetLimit(), req.GetOffset()), nil
 }
